--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <title>Тюменский лифтовый завод</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <meta name="description" content="tlz">
-  <link rel="preload" href="fonts/Exo3-Italic-VariableFont_wght.woff3" as="font" type="font/woff3">
-  <link rel="preload" href="fonts/Exo3-VariableFont_wght.woff3" as="font" type="font/woff3">
+  <link rel="preload" href="fonts/Exo2-Italic-VariableFont_wght.woff2" as="font" type="font/woff2">
+  <link rel="preload" href="fonts/Exo2-VariableFont_wght.woff2" as="font" type="font/woff2">
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <link rel="stylesheet" href="css/leaflet.css">
@@ -65,7 +65,7 @@
                 <p>Приветствует Вас на сайте нашего предприятия!</p>
               </div>
               <div class="intro__address">
-                <h3>Адрес</h3>
+                <h2>Адрес</h2>
                 <p>ООО «Тюменский лифтовой завод»
                   635031, РФ, г. Тюмень, ул. Дружбы, 113</p>
               </div>
@@ -95,7 +95,7 @@
         <div class="row justify-content-center">
           <div class="col-md-10 col-lg-6">
             <div class="section-heading text-center">
-              <h3>Услуги</h3>
+              <h2>Услуги</h2>
               <p></p>
             </div>
           </div>
@@ -280,197 +280,6 @@
                 </div>
               </li>
             </ul>
-
-            <!-- Now -->
-
-            <!-- <ul class="list-unstyled mb-0">
-              <li>
-                <div class="row align-items-center justify-content-between">
-                  <div class="col-6">
-                    <h3>Модернизация кабин</h3>
-                    <p>Работа по модернизации кабины лифта от любого производителя.</p>
-                  </div>
-                  <div class="col-6">
-                    <a target="_blank" href="./img/services/1.jpg">
-                      <img src="./img/services/1.jpg" alt="">
-                    </a>
-                  </div>
-                </div>
-              </li>
-              <li>
-                <div class="row align-items-center justify-content-between">
-                  <div class="col-6">
-                    <a target="_blank" href="./img/services/3.jpg">
-                      <img src="./img/services/3.jpg" alt="" width="160">
-                    </a>
-                    <a target="_blank" href="./img/services/3.jpg">
-                      <img src="./img/services/3.jpg" alt="" width="300" height="310">
-                    </a>
-                    <a target="_blank" href="./img/services/izgotovleniye.jpg">
-                      <img src="./img/services/izgotovleniye.jpg" alt="" width="160">
-                    </a>
-                  </div>
-                  <div class="col-6">
-                    <h3>Покраска, изготовление дверей</h3>
-                    <p>Устранение сколов, царапин, следов вандализма. Полная или частичная перекраска поверхностей.</p>
-                  </div>
-                </div>
-              </li>
-              <li>
-                <div class="row align-items-center justify-content-between">
-                  <div class="col-6">
-                    <h3>Обрамление</h3>
-                    <p>Обрамление лифтового портала — это защитно-декоративная конструкция из стали, которая закрывает
-                      щели
-                      между шахтой и дверью лифта.</p>
-                  </div>
-                  <div class="col-6">
-                    <a target="_blank" href="./img/services/4.jpg">
-                      <img src="./img/services/4.jpg" alt="">
-                    </a>
-                    <a target="_blank" href="./img/services/obramlenie.jpg">
-                      <img src="./img/services/obramlenie.jpg" height="305">
-                    </a>
-                  </div>
-                </div>
-              </li>
-              <li>
-                <div class="row align-items-center justify-content-between">
-                  <div class="col-6">
-                    <a target="_blank" href="./img/services/10.jpg">
-                      <img src="./img/services/10.jpg" alt="">
-                    </a>
-                  </div>
-                  <div class="col-6">
-                    <h3>Заказ и доставка запасных частей</h3>
-                    <p>Поставка качественных запасных частей для лифтов по всей России от ведущих мировых и российских
-                      производителей.</p>
-                  </div>
-                </div>
-              </li>
-              <li>
-                <div class="row align-items-center justify-content-between">
-                  <div class="col-7">
-                    <h3>Изготовление противопожарных дверей шахт, кабин, люков для машинных отделений, ограждений</h3>
-                    <p>Собственное производство противопожарных и металлоизделий на высокотехнологичном оборудовании, с
-                      использованием качественных материалов.</p>
-                  </div>
-                  <div class="col-5">
-                    <a target="_blank" href="./img/services/8.jpg">
-                      <img src="./img/services/8.jpg" alt="">
-                    </a>
-                    <a target="_blank" href="./img/services/9.jpg">
-                      <img src="./img/services/9.jpg" alt="">
-                    </a>
-                  </div>
-                </div>
-              </li>
-              <li>
-                <div class="row align-items-center justify-content-between">
-                  <div class="col-5">
-                    <a target="_blank" href="./img/services/7.jpg">
-                      <img src="./img/services/7.png" alt="">
-                    </a>
-                  </div>
-                  <div class="col-7">
-                    <h3>Заказ и продажа инвалидных подъемников к подъездам.</h3>
-                    <p>Реализация продукции для МГН и инвалидов.</p>
-                  </div>
-                </div>
-              </li>
-              <li>
-                <div class="row align-items-center justify-content-between">
-                  <div class="col-8">
-                    <h3>Доставка</h3>
-                    <p>Перевозка продукции до объекта установки. Осуществляется по всей территории РФ.</p>
-                  </div>
-                  <div class="col-4">
-                    <a target="_blank" href="./img/services/5.jpg">
-                      <img src="./img/services/5.jpg" alt="">
-                    </a>
-                  </div>
-                </div>
-              </li>
-              <li>
-                <div class="row align-items-center justify-content-between">
-                  <div class="col-4">
-                    <a target="_blank" href="./img/services/objects.jpg">
-                      <img src="./img/services/objects.jpg" alt="">
-                    </a>
-                  </div>
-                  <div class="col-8">
-                    <h3>Принимаем заказы на изделия по облагораживанию дворовых объектов</h3>
-                    <p>Перевозка продукции до объекта установки. Осуществляется по всей территории РФ.</p>
-          </div>
-        </div>
-        </li>
-        </ul> -->
-            <!-- <ul class="text-center list-unstyled mb-0">
-              <li>
-                <h3>ЛП-401Р</h3>
-                <div class="service__row">
-                  <p>Скорость</p>
-                  <span>1.0</span>
-                </div>
-                <div class="service__row">
-                  <p>Грузоподъемность</p><span>400</span>
-                </div>
-                <div class="service__row">
-                  <p>Размер кабины</p><span>930x1030</span>
-                </div>
-                <div class="service__row">
-                  <p>Размер шахты</p><span>1400x1600</span>
-                </div>
-              </li>
-              <li>
-                <h3>ЛП-601Р</h3>
-                <div class="service__row">
-                  <p>Скорость</p>
-                  <span>1.0</span>
-                </div>
-                <div class="service__row">
-                  <p>Грузоподъемность</p><span>400</span>
-                </div>
-                <div class="service__row">
-                  <p>Размер кабины</p><span>930x1030</span>
-                </div>
-                <div class="service__row">
-                  <p>Размер шахты</p><span>1400x1600</span>
-                </div>
-              </li>
-              <li>
-                <h3>ЛП-611Р</h3>
-                <div class="service__row">
-                  <p>Скорость</p>
-                  <span>1.0</span>
-                </div>
-                <div class="service__row">
-                  <p>Грузоподъемность</p><span>400</span>
-                </div>
-                <div class="service__row">
-                  <p>Размер кабины</p><span>930x1030</span>
-                </div>
-                <div class="service__row">
-                  <p>Размер шахты</p><span>1400x1600</span>
-                </div>
-              </li>
-              <li>
-                <h3>ЛП-631Р</h3>
-                <div class="service__row">
-                  <p>Скорость</p>
-                  <span>1.0</span>
-                </div>
-                <div class="service__row">
-                  <p>Грузоподъемность</p><span>400</span>
-                </div>
-                <div class="service__row">
-                  <p>Размер кабины</p><span>930x1030</span>
-                </div>
-                <div class="service__row">
-                  <p>Размер шахты</p><span>1400x1600</span>
-                </div>
-              </li>
-            </ul> -->
           </div>
         </div>
       </div>
@@ -483,13 +292,13 @@
         <div class="row justify-content-between align-items-center">
           <div class="col-md-7 col-sm-12">
             <div class="section-heading">
-              <h3 class="mb-3">О компании</h3>
-              <p>«Тюменский лифтовой завод" основан в 2010 году. Накопив огромный опыт установки лифтов разных
-                производителей и превратив его в конкретные инженерные решения, "Тюменский лифтовой завод" совместно с
-                ОАО "Могилёвлифтмаш" приступила к выпуску собственного лифтового оборудования, используя последние
+              <h2 class="mb-3">О компании</h2>
+              <p>«Тюменский лифтовой завод» основан в 2010 году. Накопив огромный опыт установки лифтов разных
+                производителей и превратив его в конкретные инженерные решения, «Тюменский лифтовой завод» совместно с
+                ОАО «Могилёвлифтмаш» приступили к выпуску собственного лифтового оборудования, используя последние
                 инновации в данной сфере. Основное направление производства - современные пассажирские лифты категорий
-                "эконом", предназначенные для застройки жилых массивов, для замены и модернизации устаревших лифтов,
-                отработавших нормативный срок эксплуатации.«</p>
+                «эконом», предназначенные для застройки жилых массивов, для замены и модернизации устаревших лифтов,
+                отработавших нормативный срок эксплуатации.</p>
             </div>
           </div>
           <div class="col-md-4 col-sm-12">
@@ -506,7 +315,7 @@
         <div class="row justify-content-center">
           <div class="col-8">
             <div class="section-heading text-center">
-              <h3>Немного статистики</h3>
+              <h2>Немного статистики</h2>
               <p></p>
             </div>
           </div>
@@ -517,7 +326,7 @@
               <li class="efficiency__card">
                 <div class="card-header">
                   <img src="img/on-market.svg" width="80" alt="">
-                  <span>10 лет</span>
+                  <span>13 лет</span>
                 </div>
                 <p>На рынке</p>
               </li>
@@ -546,7 +355,7 @@
         <div class="row align-items-center justify-content-center">
           <div class="service-card-block">
             <div class="section-heading text-center">
-              <h3>Объекты</h3>
+              <h2>Объекты</h2>
               <p></p>
             </div>
             <div class="row justify-content-center intro__clients">
@@ -657,7 +466,7 @@
         <div class="row align-items-center justify-content-between">
           <div class="col-lg-6 col-md-12 col-sm-12" id="contacts">
             <div class="section-heading">
-              <h3>Свяжитесь с нами</h3>
+              <h2>Свяжитесь с нами</h2>
               <p><br> ООО «Тюменский лифтовой завод»
                 635031, РФ, г. Тюмень, ул. Дружбы, 113</p>
             </div>
@@ -672,7 +481,7 @@
                 <li class="feedback__item feedback__item--phone">
                   <span></span>
                   <h4>Наш телефон</h4>
-                  <a href="tel:+79334417711">+7 (3453) 390-366</a>
+                  <a href="tel:+73452290266">+7 3452 290-266</a>
                 </li>
               </ul>
             </div>
@@ -714,7 +523,7 @@
       <div class="container">
         <div class="row justify-content-between align-items-center">
           <div class="col-lg-6 col-md-6 col-sm-12 main-footer__copyrights">
-            <p>Copyright © 2004 — 2017, ООО «Тюменский лифтовой завод»</p>
+            <p>Copyright © 2010 — 2023, ООО «Тюменский лифтовой завод»</p>
           </div>
           <div class="col-lg-6 col-md-6 col-sm-12 main-footer__social-section">
             <div class="row align-items-center">
