--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                             </div>
                             <div class="intro__address">
                                 <h2>Адрес</h2>
-                                <p>ООО «Тюменский лифтовой завод» 635031, РФ, г. Тюмень, ул. Дружбы, 113</p>
+                                <p>ООО «Тюменский лифтовой завод» <br>635031, РФ, г. Тюмень, ул. Дружбы, 113</p>
                             </div>
                         </div>
                         <div class="col-lg-5 col-md-12 col-sm-12">
