--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@
                                 <a class="nav-link" href="#contacts">Контакты</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="img/Tlz-Catalog.pdf"><span class="catalog">Каталог</span></a>
+                                <a class="nav-link desktop" href="img/Tlz-Catalog.pdf"><span class="catalog">Каталог</span></a>
+                                <a class="nav-link mobile" href="img/Tlz-Catalog.pdf" download><span class="catalog">Каталог</span></a>
                             </li>
                         </ul>
                         <div>
@@ -286,12 +287,12 @@
                     <div class="carousel-inner">
                         <div class="carousel-item active">
                             <div class="row justify-content-center align-items-center">
-                                <div class="col-5">
+                                <div class="col-lg-5 col-sm-12 col-md-12">
                                     <a target="_blank" href="img/catalog/elevators/Tlz-Catalog_23.jpg">
                                         <img class="d-block" src="img/catalog/elevators/Tlz-Catalog_23.jpg" alt="First slide" height="700">
                                     </a>
                                 </div>
-                                <div class="col-5">
+                                <div class="col-lg-5 col-sm-12 col-md-12">
                                     <table class="table table-striped elevator-create__table">
                                         <thead>
                                             <th colspan="2">Modern Line 50</th>
@@ -355,12 +356,12 @@
                         </div>
                         <div class="carousel-item">
                             <div class="row justify-content-center align-items-center">
-                                <div class="col-5">
+                                <div class="col-lg-5 col-sm-12 col-md-12">
                                     <a target="_blank" href="img/catalog/elevators/Tlz-Catalog_24.jpg">
                                         <img class="d-block" src="img/catalog/elevators/Tlz-Catalog_24.jpg" alt="Second slide" height="700">
                                     </a>
                                 </div>
-                                <div class="col-5">
+                                <div class="col-lg-5 col-sm-12 col-md-12">
                                     <table class="table table-striped elevator-create__table">
                                         <thead>
                                             <th colspan="2">Modern Line 10</th>
@@ -424,12 +425,12 @@
                         </div>
                         <div class="carousel-item">
                             <div class="row justify-content-center align-items-center">
-                                <div class="col-5">
+                                <div class="col-lg-5 col-sm-12 col-md-12">
                                     <a target="_blank" href="img/catalog/elevators/Tlz-Catalog_25.jpg">
                                         <img class="d-block" src="img/catalog/elevators/Tlz-Catalog_25.jpg" alt="Third slide" height="700">
                                     </a>
                                 </div>
-                                <div class="col-5">
+                                <div class="col-lg-5 col-sm-12 col-md-12">
                                     <table class="table table-striped elevator-create__table">
                                         <thead>
                                             <th colspan="2">Modern Line 20</th>
@@ -505,13 +506,13 @@
             </div>
         </section>
 
-        <section class="site-section elevator-examples" id="elevators-examples">
+        <section class="site-section elevator-example" id="elevators-example">
             <div class="container">
                 <div class="section-heading text-center">
                     <h2 class="mb-5">Примеры параметров лифтов</h2>
                 </div>
                 <div class="row align-items-center justify-content-between">
-                    <div class="col-7">
+                    <div class="col-lg-7 col-md-12 col-sm-12">
                         <div class="elevator-example__description">
                             <ul>
                                 <li>
@@ -539,7 +540,7 @@
                             </ul>
                         </div>
                     </div>
-                    <div class="col-4">
+                    <div class="col-lg-4 col-md-12 col-sm-12">
                         <div id="carouselElevatorExample" class="carousel slide elevator-example__slider" data-bs-ride="carousel">
                             <div class="carousel-inner">
                                 <div class="carousel-item active">
