--- a/index.html
+++ b/index.html
@@ -519,23 +519,40 @@
                                     <p>Основные параметры лифта подбираются с учетом этажности строения. Чем выше пассажиропоток, тем больше габариты кабины.</p>
                                 </li>
                                 <li>
-                                    <p>По стандарту размеры кабины: - высота 2100-2400мм, ширина дверного проема 700-1200мм, глубина 950мм - вместимость 5 пассажиров. </p>
+                                    <p>Пассажирские лифты предназначены для установки в жилых домах и общественных зданиях.</p>
                                 </li>
                                 <li>
-                                    <p>1400мм - вместимость 8 пассажиров, 2100мм -13 вместимость пассажиров.</p>
+                                    <p>Изготавливаются с верхним расположением машинного помещения.</p>
                                 </li>
                                 <li>
-                                    <p>Самое распространенное ЛО в многоэтажных зданиях – это пассажирские лифты на грузоподъемность 400кг. Так же самое частое применение для жилых домов, офисных зданий, административных строений. Именно эту нишу «Тюменский
-                                        лифтовой завод» использует в изготовлении. </p>
-                                </li>
-                                <li>
-                                    <p>Еще один из распространенных лифтов -это грузовой лифт на 630кг., способен перевозить пассажиров с инвалидными колясками. Так же используется для перевозки габаритных покупок. Применяется как в жилых домах, больницах,
-                                        так и в строительных учреждениях. Ключевую роль в расчетах шахты играют габариты кабины.</p>
-                                </li>
-                                <li>
-                                    <p>Ну и последний этап, это машинное помещение. Рассчитывается данное помещение с учетом функции ЛО, что позволяет обслуживающему персоналу беспрепятственно устранить или установить нужную запасную часть. Провести обслуживание.
-                                        В наше время технологий ЛО становится ярче, изысканней. Разрабатываются новые узлы по безопасности, долговечности, скорости и надежности. Наше предприятие наблюдает за рынком ЛО. Лучшее берем на вооружение!
+                                    <p>Самое распространённое лифтовое оборудование в многоэтажных зданиях – это пассажирские лифты грузоподъемностью 400 кг, вместимостью 5 пассажиров и со скоростью подъема 1,6 м/с.
                                     </p>
+                                    <!-- <br> -->
+                                    <span class="characteristic">Характеристики:</span>
+                                    <ul class="sub-list">
+                                        <li>Внутренние размеры кабины: Ш х Г х В; 950 х 1100 х 2100 мм</li>
+                                        <li>Ширина дверного проема: 650, 700, 800 мм</li>
+                                    </ul>
+                                </li>
+                                <li>
+                                    <p>Еще одно из распространённого лифтового оборудования – это пассажирские лифты грузоподъемностью 630 кг, вместимостью 8 пассажиров, скорость подъема 1,6 м/с.
+                                    </p>
+                                    <!-- <br> -->
+                                    <span class="characteristic">Характеристики:</span>
+                                    <ul class="sub-list mb-3">
+                                        <li>Внутренние размеры кабины: Ш х Г х В; 1100 х 1400 х 2100 мм</li>
+                                        <li>Ширина дверного проема: 700, 800, 900 мм</li>
+                                    </ul>
+
+                                    <ul class="sub-list mb-3">
+                                        <li>Внутренние размеры кабины(широкий): Ш х Г х В; 2100 х 1100 х 2100 мм</li>
+                                        <li>Ширина дверного проема: 1200 мм</li>
+                                    </ul>
+
+                                    <ul class="sub-list">
+                                        <li>Внутренние размеры кабины(глубокий): Ш х Г х В; 1100 х 2100 х 2100 мм</li>
+                                        <li>Ширина дверного проема: 800, 900 мм</li>
+                                    </ul>
                                 </li>
                             </ul>
                         </div>
@@ -588,6 +605,21 @@
                                         <img class="d-block" src="img/catalog/process/10.jpg" height="400">
                                     </a>
                                 </div>
+                                <div class="carousel-item">
+                                    <a target="_blank" href="img/catalog/process/11.jpg">
+                                        <img class="d-block" src="img/catalog/process/11.jpg" height="400">
+                                    </a>
+                                </div>
+                                <div class="carousel-item">
+                                    <a target="_blank" href="img/catalog/process/12.jpg">
+                                        <img class="d-block" src="img/catalog/process/12.jpg" height="400">
+                                    </a>
+                                </div>
+                                <div class="carousel-item">
+                                    <a target="_blank" href="img/catalog/process/13.jpg">
+                                        <img class="d-block" src="img/catalog/process/13.jpg" height="400">
+                                    </a>
+                                </div>
                             </div>
                             <button class="carousel-control-prev" type="button" data-bs-target="#carouselElevatorExample" data-bs-slide="prev">
                 <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -618,9 +650,12 @@
                                 для замены и модернизации устаревших лифтов, отработавших нормативный срок эксплуатации.</p>
                         </div>
                     </div>
-                    <div class="col-md-4 col-sm-12">
-                        <a href="img/sertificate.pdf">
+                    <div class="col-md-5 col-sm-12">
+                        <a href="img/sertificate.pdf" style="margin-right: 10px;">
                             <img src="img/sertificate.jpg" height="350" alt="">
+                        </a>
+                        <a href="img/sertificate-application.pdf">
+                            <img src="img/sertificate-application.jpg" height="350" alt="">
                         </a>
                     </div>
                 </div>
@@ -685,7 +720,7 @@
                                                     <img src="img/objects/object-1.jpg" width="150" height="300" class="img-fluid m-auto" alt="image">
                                                 </li>
                                                 <li>
-                                                    <img src="img/objects/object-3.jpg" width="150" height="300" class="img-fluid m-auto" alt="image">
+                                                    <img src="img/objects/object-2.jpg" width="150" height="300" class="img-fluid m-auto" alt="image">
                                                 </li>
                                                 <li>
                                                     <img src="img/objects/object-3.jpg" width="150" height="300" class="img-fluid m-auto" alt="image">
@@ -708,6 +743,25 @@
                                                 </li>
                                                 <li>
                                                     <img src="img/objects/object-8.jpg" width="150" height="300" class="img-fluid m-auto" alt="image">
+                                                </li>
+                                            </ul>
+                                        </div>
+                                        <div class="carousel-item">
+                                            <ul class="intro__customer-logos text-center list-unstyled mb-0">
+                                                <li>
+                                                    <img src="img/objects/object-9.jpg" width="150" height="300" class="img-fluid m-auto" alt="image">
+                                                </li>
+                                                <li>
+                                                    <div class="before-after">
+                                                        <img src="img/objects/before.jpg" width="150" height="300" class="img-fluid m-auto" alt="image">
+                                                        <span>До замены</span>
+                                                    </div>
+                                                </li>
+                                                <li>
+                                                    <div class="before-after">
+                                                        <img src="img/objects/after.jpg" width="150" height="300" class="img-fluid m-auto" alt="image">
+                                                        <span>После замены</span>
+                                                    </div>
                                                 </li>
                                             </ul>
                                         </div>
@@ -746,6 +800,21 @@
                                         </div>
                                         <div class="carousel-item">
                                             <img src="img/objects/object-8.jpg" width="150" height="300" class="img-fluid m-auto" alt="image">
+                                        </div>
+                                        <div class="carousel-item">
+                                            <img src="img/objects/object-9.jpg" width="150" height="300" class="img-fluid m-auto" alt="image">
+                                        </div>
+                                        <div class="carousel-item">
+                                            <div class="before-after">
+                                                <img src="img/objects/before.jpg" width="150" height="300" class="img-fluid m-auto" alt="image">
+                                                <span>До замены</span>
+                                            </div>
+                                        </div>
+                                        <div class="carousel-item">
+                                            <div class="before-after">
+                                                <img src="img/objects/after.jpg" width="150" height="300" class="img-fluid m-auto" alt="image">
+                                                <span>После замены</span>
+                                            </div>
                                         </div>
                                     </div>
                                     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControlsMobile" data-bs-slide="prev">
