--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
                         <img src="img/logo.svg" width="60" alt="">
                     </a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="navbar-nav me-auto mb-3 mb-lg-0">
                             <li class="nav-item">
@@ -41,8 +41,10 @@
                                 <a class="nav-link" href="#contacts">Контакты</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link desktop" href="img/Tlz-Catalog.pdf"><span class="catalog">Каталог</span></a>
-                                <a class="nav-link mobile" href="img/Tlz-Catalog.pdf" download><span class="catalog">Каталог</span></a>
+                                <a class="nav-link desktop" href="img/Tlz-Catalog.pdf"><span
+                                        class="catalog">Каталог</span></a>
+                                <a class="nav-link mobile" href="img/Tlz-Catalog.pdf" download><span
+                                        class="catalog">Каталог</span></a>
                             </li>
                         </ul>
                         <div>
@@ -203,7 +205,8 @@
                                 <div class="service-card">
                                     <div class="service-card-block">
                                         <h3>Изготовление противопожарных дверей шахт, кабин, люков для машинных отделений, ограждений</h3>
-                                        <p>Собственное производство противопожарных и металлоизделий на высокотехнологичном оборудовании, с использованием качественных материалов.</p>
+                                        <p>Собственное производство противопожарных и металлоизделий на высокотехнологичном оборудовании, с использованием качественных материалов.
+                                        </p>
                                     </div>
                                     <div class="service-card-block">
                                         <!-- <div id="carouselService3" class="carousel slide" data-bs-ride="carousel">
@@ -250,7 +253,8 @@
                                 <div class="service-card">
                                     <div class="service-card-block">
                                         <h3>Доставка</h3>
-                                        <p>Перевозка продукции до объекта установки. Осуществляется по всей территории РФ.</p>
+                                        <p>Перевозка продукции до объекта установки. Осуществляется по всей территории РФ.
+                                        </p>
                                     </div>
                                     <!-- <div class="service-card-block">
                                         <a target="_blank" href="./img/services/5.jpg">
@@ -329,9 +333,9 @@
                                             <tr>
                                                 <td>Зеркало</td>
                                                 <td><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-check-lg" viewBox="0 0 16 16">
-                            <path
-                              d="M12.736 3.97a.733.733 0 0 1 1.047 0c.286.289.29.756.01 1.05L7.88 12.01a.733.733 0 0 1-1.065.02L3.217 8.384a.757.757 0 0 1 0-1.06.733.733 0 0 1 1.047 0l3.052 3.093 5.4-6.425a.247.247 0 0 1 .02-.022Z" />
-                          </svg></td>
+                                                        <path
+                                                            d="M12.736 3.97a.733.733 0 0 1 1.047 0c.286.289.29.756.01 1.05L7.88 12.01a.733.733 0 0 1-1.065.02L3.217 8.384a.757.757 0 0 1 0-1.06.733.733 0 0 1 1.047 0l3.052 3.093 5.4-6.425a.247.247 0 0 1 .02-.022Z" />
+                                                    </svg></td>
                                             </tr>
                                             <tr>
                                                 <td>Двери кабины</td>
@@ -344,9 +348,9 @@
                                             <tr>
                                                 <td>Фотоштора</td>
                                                 <td><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-check-lg" viewBox="0 0 16 16">
-                            <path
-                              d="M12.736 3.97a.733.733 0 0 1 1.047 0c.286.289.29.756.01 1.05L7.88 12.01a.733.733 0 0 1-1.065.02L3.217 8.384a.757.757 0 0 1 0-1.06.733.733 0 0 1 1.047 0l3.052 3.093 5.4-6.425a.247.247 0 0 1 .02-.022Z" />
-                          </svg></td>
+                                                        <path
+                                                            d="M12.736 3.97a.733.733 0 0 1 1.047 0c.286.289.29.756.01 1.05L7.88 12.01a.733.733 0 0 1-1.065.02L3.217 8.384a.757.757 0 0 1 0-1.06.733.733 0 0 1 1.047 0l3.052 3.093 5.4-6.425a.247.247 0 0 1 .02-.022Z" />
+                                                    </svg></td>
                                             </tr>
                                         </tbody>
                                     </table>
@@ -398,9 +402,9 @@
                                             <tr>
                                                 <td>Зеркало</td>
                                                 <td><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-check-lg" viewBox="0 0 16 16">
-                            <path
-                              d="M12.736 3.97a.733.733 0 0 1 1.047 0c.286.289.29.756.01 1.05L7.88 12.01a.733.733 0 0 1-1.065.02L3.217 8.384a.757.757 0 0 1 0-1.06.733.733 0 0 1 1.047 0l3.052 3.093 5.4-6.425a.247.247 0 0 1 .02-.022Z" />
-                          </svg></td>
+                                                        <path
+                                                            d="M12.736 3.97a.733.733 0 0 1 1.047 0c.286.289.29.756.01 1.05L7.88 12.01a.733.733 0 0 1-1.065.02L3.217 8.384a.757.757 0 0 1 0-1.06.733.733 0 0 1 1.047 0l3.052 3.093 5.4-6.425a.247.247 0 0 1 .02-.022Z" />
+                                                    </svg></td>
                                             </tr>
                                             <tr>
                                                 <td>Двери кабины</td>
@@ -413,9 +417,9 @@
                                             <tr>
                                                 <td>Фотоштора</td>
                                                 <td><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-check-lg" viewBox="0 0 16 16">
-                            <path
-                              d="M12.736 3.97a.733.733 0 0 1 1.047 0c.286.289.29.756.01 1.05L7.88 12.01a.733.733 0 0 1-1.065.02L3.217 8.384a.757.757 0 0 1 0-1.06.733.733 0 0 1 1.047 0l3.052 3.093 5.4-6.425a.247.247 0 0 1 .02-.022Z" />
-                          </svg></td>
+                                                        <path
+                                                            d="M12.736 3.97a.733.733 0 0 1 1.047 0c.286.289.29.756.01 1.05L7.88 12.01a.733.733 0 0 1-1.065.02L3.217 8.384a.757.757 0 0 1 0-1.06.733.733 0 0 1 1.047 0l3.052 3.093 5.4-6.425a.247.247 0 0 1 .02-.022Z" />
+                                                    </svg></td>
                                             </tr>
                                         </tbody>
                                     </table>
@@ -467,9 +471,9 @@
                                             <tr>
                                                 <td>Зеркало</td>
                                                 <td><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-check-lg" viewBox="0 0 16 16">
-                            <path
-                              d="M12.736 3.97a.733.733 0 0 1 1.047 0c.286.289.29.756.01 1.05L7.88 12.01a.733.733 0 0 1-1.065.02L3.217 8.384a.757.757 0 0 1 0-1.06.733.733 0 0 1 1.047 0l3.052 3.093 5.4-6.425a.247.247 0 0 1 .02-.022Z" />
-                          </svg></td>
+                                                        <path
+                                                            d="M12.736 3.97a.733.733 0 0 1 1.047 0c.286.289.29.756.01 1.05L7.88 12.01a.733.733 0 0 1-1.065.02L3.217 8.384a.757.757 0 0 1 0-1.06.733.733 0 0 1 1.047 0l3.052 3.093 5.4-6.425a.247.247 0 0 1 .02-.022Z" />
+                                                    </svg></td>
                                             </tr>
                                             <tr>
                                                 <td>Двери кабины</td>
@@ -482,9 +486,9 @@
                                             <tr>
                                                 <td>Фотоштора</td>
                                                 <td><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-check-lg" viewBox="0 0 16 16">
-                            <path
-                              d="M12.736 3.97a.733.733 0 0 1 1.047 0c.286.289.29.756.01 1.05L7.88 12.01a.733.733 0 0 1-1.065.02L3.217 8.384a.757.757 0 0 1 0-1.06.733.733 0 0 1 1.047 0l3.052 3.093 5.4-6.425a.247.247 0 0 1 .02-.022Z" />
-                          </svg></td>
+                                                        <path
+                                                            d="M12.736 3.97a.733.733 0 0 1 1.047 0c.286.289.29.756.01 1.05L7.88 12.01a.733.733 0 0 1-1.065.02L3.217 8.384a.757.757 0 0 1 0-1.06.733.733 0 0 1 1.047 0l3.052 3.093 5.4-6.425a.247.247 0 0 1 .02-.022Z" />
+                                                    </svg></td>
                                             </tr>
                                         </tbody>
                                     </table>
@@ -494,13 +498,13 @@
                         </div>
                     </div>
                     <button class="carousel-control-prev" type="button" data-bs-target="#carouselControlsElevators" data-bs-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Previous</span>
-          </button>
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Previous</span>
+                    </button>
                     <button class="carousel-control-next" type="button" data-bs-target="#carouselControlsElevators" data-bs-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Next</span>
-          </button>
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Next</span>
+                    </button>
                 </div>
 
             </div>
@@ -519,7 +523,8 @@
                                     <p>Основные параметры лифта подбираются с учетом этажности строения. Чем выше пассажиропоток, тем больше габариты кабины.</p>
                                 </li>
                                 <li>
-                                    <p>Пассажирские лифты предназначены для установки в жилых домах и общественных зданиях.</p>
+                                    <p>Пассажирские лифты предназначены для установки в жилых домах и общественных зданиях.
+                                    </p>
                                 </li>
                                 <li>
                                     <p>Изготавливаются с верхним расположением машинного помещения.</p>
@@ -622,13 +627,13 @@
                                 </div>
                             </div>
                             <button class="carousel-control-prev" type="button" data-bs-target="#carouselElevatorExample" data-bs-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Previous</span>
-              </button>
+                                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                <span class="visually-hidden">Previous</span>
+                            </button>
                             <button class="carousel-control-next" type="button" data-bs-target="#carouselElevatorExample" data-bs-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Next</span>
-              </button>
+                                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                <span class="visually-hidden">Next</span>
+                            </button>
                         </div>
                     </div>
                 </div>
@@ -642,21 +647,35 @@
         <section class="site-section about-company background-light" id="about-company">
             <div class="container">
                 <div class="row justify-content-between align-items-center">
-                    <div class="col-md-7 col-sm-12">
+                    <div class="col-md-6 col-sm-12">
                         <div class="section-heading">
                             <h2 class="mb-3">О компании</h2>
                             <p>«Тюменский лифтовой завод» основан в 2010 году. Накопив огромный опыт установки лифтов разных производителей и превратив его в конкретные инженерные решения, «Тюменский лифтовой завод» совместно с ОАО «Могилёвлифтмаш» приступили
                                 к выпуску собственного лифтового оборудования, используя последние инновации в данной сфере. Основное направление производства - современные пассажирские лифты категорий «эконом», предназначенные для застройки жилых массивов,
-                                для замены и модернизации устаревших лифтов, отработавших нормативный срок эксплуатации.</p>
+                                для замены и модернизации устаревших лифтов, отработавших нормативный срок эксплуатации.
+                            </p>
                         </div>
                     </div>
                     <div class="col-md-5 col-sm-12">
-                        <a href="img/sertificate.pdf" style="margin-right: 10px;">
-                            <img src="img/sertificate.jpg" height="350" alt="">
-                        </a>
-                        <a href="img/sertificate-application.pdf">
-                            <img src="img/sertificate-application.jpg" height="350" alt="">
-                        </a>
+                        <div class="row">
+                            <div class="col-md-4 col-sm-12">
+                                <a href="img/sertificate.pdf" style="margin-right: 10px;">
+                                    <img src="img/sertificate.jpg" height="250" alt="">
+                                </a>
+                            </div>
+                            <div class="col-md-4 col-sm-12">
+                                <a href="img/sertificate-application.pdf">
+                                    <img src="img/sertificate-application.jpg" height="250" alt="">
+                                </a>
+                            </div>
+                            <div class="col-md-4 col-sm-12">
+                                <a href="img/sertificate-2.pdf">
+                                    <img src="img/sertificate-2.jpg" height="250" alt="">
+                                </a>
+                            </div>
+                        </div>
+
+
                     </div>
                 </div>
             </div>
@@ -767,13 +786,13 @@
                                         </div>
                                     </div>
                                     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
-                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Previous</span>
-                  </button>
+                                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                        <span class="visually-hidden">Previous</span>
+                                    </button>
                                     <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
-                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Next</span>
-                  </button>
+                                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                        <span class="visually-hidden">Next</span>
+                                    </button>
                                 </div>
                                 <div id="carouselExampleControlsMobile" class="carousel slide mobile" data-bs-ride="carousel">
                                     <div class="carousel-inner">
@@ -818,13 +837,13 @@
                                         </div>
                                     </div>
                                     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControlsMobile" data-bs-slide="prev">
-                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Previous</span>
-                  </button>
+                                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                        <span class="visually-hidden">Previous</span>
+                                    </button>
                                     <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControlsMobile" data-bs-slide="next">
-                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Next</span>
-                  </button>
+                                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                        <span class="visually-hidden">Next</span>
+                                    </button>
                                 </div>
                             </div>
                         </div>
